prevent tx table columns from jumping around, jump, jump

--- a/src/components/AccountDetails/AccountLayout/AccountDetailsCard/accountDetailsCard.scss
+++ b/src/components/AccountDetails/AccountLayout/AccountDetailsCard/accountDetailsCard.scss
@@ -13,11 +13,4 @@
   .status-text-danger {
     @include top-bar($danger);
   }
-  .transactions-table {
-    .table {
-      .transaction-value {
-        max-width: 13rem;
-      }
-    }
-  }
 }
