--- a/src/sharedComponents/TransactionsTable/transactionsTable.scss
+++ b/src/sharedComponents/TransactionsTable/transactionsTable.scss
@@ -17,7 +17,7 @@
     }
 
     .transaction-value {
-      max-width: 14rem;
+      width: 13rem;
       .token-value,
       .nft-value {
         display: contents;
